modified url action form

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -12,7 +12,11 @@
                 <h5 class="card-title"><%= contact.nama %></h5>
                 <h6 class="card-subtitle mb-2 text-muted"><%= contact.nohp %></h6>
                 <p class="card-text"><%= contact.email %></p>
-                <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Apakah anda ingin menghapus kontak ini?');">Hapus</a>
+                <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Apakah anda ingin menghapus kontak ini?');">Hapus</a> -->
+                <form action="/contact?_method=DELETE" method="POST" class="d-inline">
+                  <input type="hidden" name="nama" value="<%= contact.nama %>">
+                  <button type="submit" class="btn btn-danger badge" onclick="return confirm('Ingin menghapus kontak?')">Hapus</button>
+                </form>
                 <a href="/contact/edit/<%= contact.nama %>" class="btn btn-info badge text-success">Ubah</a>
                 <a href="/contact" class="card-link d-block mt-3">&laquo; Kembali</a>
               </div>
